app/assets/stylesheets/navbar.css
header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 60px;
  padding: 11px 20px;
  column-gap: 7px;
  width: 100%;
}

#logo {
  width: 132px;
  height: 38px;
}

#beta {
  border: 1px solid var(--brown);
  padding: 4px 9px 3px 9px;
  margin-left: 5px;
}

#burger {
  display: flex;
  gap: 10.5px;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  background: none;
  border: none;
  z-index: 999;
  padding: 9px 2px;
}

#burger span {
  width: 38px;
  height: 1px;
  background-color: var(--green);
}

#burger.active {
  position: fixed;
  right: 20px;
}

#burger.active span:nth-child(1) {
  transform: translateY(15px) rotate(45deg);
}

#burger.active span:nth-child(2) {
  opacity: 0;
}

#burger.active span:nth-child(3) {
  transform: translateY(-6px) rotate(-45deg);
}

#search-container {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  width: 100%;
}

#search-wrapper {
  display: none;
  background-color: var(--white);
  border-radius: 0px 0px 5px 5px;
  border-bottom: 1px solid #989e9a;
  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
}

#search-form {
  display: flex;
  padding: 8px 20px 7px 20px;
}

#search-field {
  background-color: transparent;
  width: 100%;
  border: none;
}

#search-field:focus {
  outline: none;
}

#search-results {
  border-top: 0.5px solid #989e9a;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.search-results-link-container {
  height: auto;
  border: 0.5px solid #989e9a;
  width: 100%;
}

.search-results-link {
  padding: 15px 20px 15px 20px;
  text-decoration: none;
  display: block;
}

#search-icon {
  padding: 9px 7px;
}

.extend {
  z-index: 999;
  display: block !important;
  position: absolute;
  top: 59px;
  left: 2px;
  right: 2px;
  width: calc(100% - 4px);
}

nav {
  display: flex;
}

#nav-menu {
  display: none;
}

#nav-menu.active {
  position: fixed;
  overflow: hidden;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: 2px solid var(--dark-green);
  background-color: var(--white);
  z-index: 999;
  padding-top: 90px;
  padding-bottom: 100px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  list-style-type: none;
}

#add-place-link {
  gap: 5px;
  font-size: 18px;
}

#sign-in-link {
  height: 42px;
  border-radius: 20px;
  background: var(--green);
  color: var(--white);
  font-weight: 500;
  line-height: 100%;
  padding: 13px 21px 13px 21px;
}

/* #nav-menu .session-links {
  height: 60px;
  width: 184px;
  line-height: 25px;
  border: 2px solid var(--black);
  justify-content: space-between;
  padding: 17.5px 30px;
} */

#nav-menu.hidden {
  display: none;
}

.hidden {
  display: none;
}

@media (min-width: 1024px) {
  a {
    font-size: 20px;
  }

  header {
    padding: 0 0 0 50px;
    height: 70px;
  }

  #search-container {
    justify-content: center;
    flex-direction: row-reverse;
  }

  #search-wrapper {
    display: flex;
    flex-direction: column;
    width: 100%;
    max-width: 400px;
    border: none;
    position: relative;
    padding-left: 10px;
  }

  #search-form {
    height: 100%;
    padding: 0;
  }

  #search-field {
    height: 50px;
  }

  #search-field::placeholder {
    color: var(--dark-green);
    opacity: 0.8;
  }

  .search-results-link-container {
    border-top: 1px solid var(--dark-green);
    border-left: 1px solid var(--dark-green);
    border-right: 1px solid var(--dark-green);
    border-bottom: none;
  }

  .search-results-link-container:last-of-type {
    border-bottom: 1px solid var(--dark-green);
  }

  #search-results {
    z-index: 999;
    position: absolute;
    top: 45px;
    left: 0;
    padding: 0;
    border: none;
  }

  .search-results-link {
    padding-left: 10px;
    border: none;
  }

  #burger {
    display: none;
  }

  #nav-menu {
    display: flex;
    list-style-type: none;
  }

  .nav-link {
    display: flex;
    align-items: center;
  }

  .nav-link span {
    white-space: nowrap;
  }

  #nav-menu .session-links {
    height: 68px;
    border-top: none;
    border-right: none;
    border-bottom: none;
  }

  #add-place-link {
    height: 68px;
    width: 175px;
    justify-content: space-between;
    padding: 17.5px 30px;
  }
}

